Refactored to use Javaslang persistant collections.